Remove Is at pickup point
